# yamos6502

./: Cargo.toml  README.md
asm/: ora.s
examples/: yamos6502e.rs
src/: bcd.rs  insns.rs  regfile.rs  yamos6502.rs
src/lib/: Cargo.toml
src/lib/src/: insns.rs  lib.rs  regfile.rs  tests.rs  ya6502.rs  yamos6502.rs
