[package]
name = "yamos6502"
version = "0.1.2"
edition = "2021"
authors = ["kromych@github.com"]
description = "MOS 6502 emulator"
homepage = "https://github.com/kromych/yamos6502"
repository = "https://github.com/kromych/yamos6502"
readme = "README.md"
keywords = ["emulator", "6502", "no-std"]
categories = ["command-line-utilities", "emulators", "no-std", "embedded"]
license = "MIT"

[lib]
name = "yamos6502"
path = "src/lib.rs"

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
clap-num = "1"
env_logger = "0.10"
log = "0.4"
anyhow = "1"

[features]
default = ["std"]
std = []
